--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "hautelook/alice-bundle": "^2.9",
         "symfony/debug-bundle": "^5.2",
         "symfony/maker-bundle": "^1.31",
