Modifications to use Security Component with User Entity

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -18,3 +18,5 @@ services:
         resource: '../src/Controller/'
         tags: ['controller.service_arguments']
 
+    AppBundle\DataFixtures\Provider\HashPasswordProvider: ~
+
