--- a/fixtures/Image.yaml
+++ b/fixtures/Image.yaml
@@ -1,100 +1,6 @@
 App\Entity\Image:
-    image1:
-      name:
-      alt:
-      figure: '@figure1'
+    image{1..20}:
+      name: <image('public\images\uploads\figures', 1200, 800, sport, true, true, snowboard, false)>
+      alt: snowboard image
+      figure: '@figure*'
 
-    image2:
-      name:
-      alt:
-      figure: '@figure1'
-
-    image3:
-      name:
-      alt:
-      figure: '@figure1'
-
-    image4:
-      name:
-      alt:
-      figure: '@figure1'
-
-    image5:
-      name:
-      alt:
-      figure: '@figure1'
-
-    image6:
-      name:
-      alt:
-      figure: '@figure1'
-
-    image7:
-      name:
-      alt:
-      figure: '@figure1'
-
-    image8:
-      name:
-      alt:
-      figure: '@figure1'
-
-    image9:
-      name:
-      alt:
-      figure: '@figure1'
-
-    image10:
-      name:
-      alt:
-      figure: '@figure1'
-
-    image11:
-      name:
-      alt:
-      figure: '@figure1'
-
-    image12:
-      name:
-      alt:
-      figure: '@figure1'
-
-    image13:
-      name:
-      alt:
-      figure: '@figure1'
-
-    image14:
-      name:
-      alt:
-      figure: '@figure1'
-
-    image15:
-      name:
-      alt:
-      figure: '@figure1'
-
-    image16:
-      name:
-      alt:
-      figure: '@figure1'
-  
-    image17:
-      name:
-      alt:
-      figure: '@figure1'
-
-    image18:
-      name:
-      alt:
-      figure: '@figure1'
-
-    image19:
-      name:
-      alt:
-      figure: '@figure1'
-
-    image20:
-      name:
-      alt:
-      figure: '@figure1'
