--- a/fixtures/Figure.yaml
+++ b/fixtures/Figure.yaml
@@ -2,6 +2,8 @@ App\Entity\Figure:
     figure (template):
         createdAt: <dateTimeBetween('-2 years','-1 year', null)>
         updatedAt: 85%? <dateTimeBetween('-2 years', 'now', null)>
+        images: '<numberBetween(1, 3)>x @image*'
+        comments: '<numberBetween(12, 15)>x @comment*'
 
     figure1 (extends figure):
         name: Le Backside 180
@@ -26,9 +28,8 @@ App\Entity\Figure:
           \n
           Source : https://www.snowsurf.com/snow-tricks-comment-faire-backside-180-snowboard"
         figureGroup: Rotation
-        images: []
         videos: ['@video1']
-        comments: []
+
 
     figure2 (extends figure):
         name: Le Frontside Boardslide
@@ -52,9 +53,7 @@ App\Entity\Figure:
           
           Source : https://nomadsnowboard.com/comment-faire-un-board-slide-en-snowboard/"
         figureGroup: Slide
-        images: []
         videos: ['@video2']
-        comments: []
 
     figure3 (extends figure):
         name: Le Switch Back 540
@@ -78,9 +77,7 @@ App\Entity\Figure:
           \n
           Source : https://www.snowsurf.com/snow-tricks-comment-faire-switch-back-5-4-snowboard"
         figureGroup: Rotation
-        images: []
         videos: ['@video3']
-        comments: []
 
     figure4 (extends figure):
         name: Le Backflip
@@ -108,9 +105,7 @@ App\Entity\Figure:
           \n
           Source : https://www.snowsurf.com/snow-tricks-comment-faire-backflip-snowboard"
         figureGroup: Flip
-        images: []
         videos: ['@video4']
-        comments: []
 
     figure5 (extends figure):
         name: Le Method
@@ -140,9 +135,7 @@ App\Entity\Figure:
           \n
           Source : https://whitelines.com/snowboarding-advice/trick-tips/kicker/how-to-do-a-method-grab-with-nate-kern.html"
         figureGroup: Grab
-        images: []
         videos: ['@video5']
-        comments: []
 
     figure6 (extends figure):
         name: Le Frontside 360
@@ -168,9 +161,7 @@ App\Entity\Figure:
           \n
           Source : https://www.snowsurf.com/snow-tricks-comment-faire-frontside-360-snowboard"
         figureGroup: Rotation
-        images: []
         videos: ['@video6']
-        comments: []
 
     figure7 (extends figure):
         name: L'Indy
@@ -185,9 +176,7 @@ App\Entity\Figure:
           \n
           Source : https://www.snowsurf.com/snow-tricks-comment-faire-grabs-snowboard"          
         figureGroup: Grab
-        images: []
         videos: ['@video7', '@video8', '@video9']
-        comments: []
 
     figure8 (extends figure):
         name: Le Mute
@@ -202,9 +191,7 @@ App\Entity\Figure:
           \n
           Source : https://www.snowsurf.com/snow-tricks-comment-faire-grabs-snowboard"  
         figureGroup: Grab
-        images: []
         videos: ['@video10', '@video11', '@video12']
-        comments: []
 
     figure9 (extends figure):
         name: Le Switch Backside 540
@@ -227,9 +214,7 @@ App\Entity\Figure:
           \n
           Source : https://www.snowsurf.com/snow-tricks-comment-faire-switch-back-5-4-snowboard"
         figureGroup: Rotation
-        images: []
         videos: ['@video13']
-        comments: []
 
     figure10 (extends figure):
         name: Le Stalefish
@@ -244,9 +229,7 @@ App\Entity\Figure:
           \n
           Source : https://www.snowsurf.com/snow-tricks-comment-faire-grabs-snowboard"  
         figureGroup: Grab
-        images: []
         videos: ['@video14', '@video15', '@video16']
-        comments: []
 
 
 
