Add a custom faker provider for user and figure images

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,5 +23,8 @@ services:
 
     AppBundle\DataFixtures\Provider\HashPasswordProvider:
         tags: [ { name: nelmio_alice.faker.provider } ]
+
+    AppBundle\DataFixtures\Provider\ImageProvider:
+        tags: [ { name: nelmio_alice.faker.provider } ]
     
 
