modifications in Image.yaml and User.yaml to use the new custom faker provider for images.

--- a/fixtures/Image.yaml
+++ b/fixtures/Image.yaml
@@ -1,6 +1,6 @@
 App\Entity\Image:
     image{1..20}:
-      name: <image('public\images\uploads\figures', 1200, 800, sport, true, true, snowboard, false)>
+      name: <figureImage()>
       alt: snowboard image
       figure: '@figure*'
 
