--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,7 +22,7 @@ security:
                     - App\Security\AppAuthenticator
             logout:
                 path: app_logout
-                # where to redirect after logout
-                # target: app_any_route
+                target: homepage
 
     access_control:
+      - { path: ^/figure/form, roles: ROLE_USER }
